--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 
 html, body {
     height: 100%;
-    margin-top: 10px;
+    margin-top: 30px;
     background-color: rgb(212, 231, 255);
     margin-left:3%; 
     margin-right:3%
@@ -10,7 +10,6 @@ html, body {
   
   #Data_Plot {
     position: relative;
-    border: 1px solid rgb(37, 37, 37);
     border-radius: 12px;
     height: 600px; 
     width: 100%;  
@@ -48,6 +47,10 @@ html, body {
     color: #ffffff;
     background-color: #7485ad;
     border-color: #7485ad;
+  }
+
+  .panel-body {
+    height: 600px;
   }
   
   
